[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentmesh-reputation-gate"
version = "0.1.0"
description = "Reputation-gated authority resolver for AgentMesh. Composes trust scoring with delegation chains via monotonic narrowing."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Tymofii Pidlisnyi", email = "tima@aeoess.com"}]
keywords = ["agentmesh", "agent-governance", "trust", "delegation", "reputation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/aeoess/agentmesh-reputation-gate"
Repository = "https://github.com/aeoess/agentmesh-reputation-gate"
Issues = "https://github.com/aeoess/agentmesh-reputation-gate/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
